--- a/auto-doc-scrap.ipynb
+++ b/auto-doc-scrap.ipynb
@@ -10,6 +10,7 @@
     "import pandas as pd \n",
     "import geopandas as gpd \n",
     "from pygit2 import Repository\n",
+    "from IPython import get_ipython\n",
     "import os \n",
     "\n",
     "class DataFile:\n",
@@ -21,8 +22,6 @@
     "    def add_metadata(self, key, value):\n",
     "        self.metadata[key] = value\n",
     "\n",
-    "\n",
-    "\n",
     "class Document: \n",
     "    def __init__(self, yaml_file):\n",
     "        self.yaml_file = yaml_file\n",
@@ -32,134 +31,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1932217471.py, line 10)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[2], line 10\u001b[0;36m\u001b[0m\n\u001b[0;31m    def add_github_url(repo=\".\"remote=\"origin\", overwrite=False):\u001b[0m\n\u001b[0m                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# .add_github_url() method: \n",
+    "# DataFile.add_github() method: \n",
     "# Add a Github URL to the DataFile object metadata.\n",
     "# Default repo is current directory (\".\").\n",
     "# Default branch is <current-remote>/<current-local-branch>\n",
+    "    # Throws error if current branch is not found in remote\n",
     "# Default URL format is from current origin/branch + filename where the method is called.\n",
     "# Intended to be for the github link to the code that you used to produce the file you're documenting.  \n",
-    "# \"overwrite=False\" flag for if there's an existing URL already \n",
-    "  "
+    "# \"overwrite=False\" flag for if there's an existing URL already "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'1/alex/auto-doc'"
+       "'https://github.com/apsocarras/AlexS-TechImpact-codebook/tree/1/alex/auto-doc/auto-doc-scrap.ipynb'"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "repo_name=\".\"\n",
-    "remote=\"origin\"\n",
-    "repo = Repository(repo_name)\n",
-    "remote = repo.remotes[remote]\n",
+    "repo = Repository(\".\")\n",
+    "\n",
+    "## Current branch \n",
     "current_branch = repo.head.shorthand\n",
-    "current_branch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'_pygit2.Branch' object has no attribute 'url'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[31], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m repo\u001b[39m.\u001b[39;49mbranches[current_branch]\u001b[39m.\u001b[39;49murl\n",
-      "\u001b[0;31mAttributeError\u001b[0m: '_pygit2.Branch' object has no attribute 'url'"
-     ]
-    }
-   ],
-   "source": [
-    "repo.branches[current_branch].url # Haven't pushed this yet, so error."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['origin/main']"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list(repo.branches.remote)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'_pygit2.Branch' object has no attribute 'url'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[26], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m repo\u001b[39m.\u001b[39;49mbranches[\u001b[39m'\u001b[39;49m\u001b[39mmain\u001b[39;49m\u001b[39m'\u001b[39;49m]\u001b[39m.\u001b[39;49murl\n",
-      "\u001b[0;31mAttributeError\u001b[0m: '_pygit2.Branch' object has no attribute 'url'"
-     ]
-    }
-   ],
-   "source": [
-    "repo.branches['main']."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<pygit2.remote.RemoteCollection at 0x13fe37c70>"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[repo.remotes]"
+    "\n",
+    "# Check if branch exists in remote \n",
+    "if not any(current_branch in r for r in list(repo.branches.remote)): # not 100% robust -- branch could be in a remote but not the current remote\n",
+    "    raise Exception(f\"Current branch {current_branch} not found in any remote\")\n",
+    "\n",
+    "## Current remote\n",
+    "current_remote_name = repo.config[f\"branch.{current_branch}.remote\"]\n",
+    "current_remote_url = repo.config[f\"remote.{current_remote_name}.url\"]\n",
+    "\n",
+    "## Current file \n",
+    "# We're going to use this class in jupyter notebook, so we need to access the current notebook name\n",
+    "# Typical os.path.basename(_file_) won't work \n",
+    "# For Vscode users: https://github.com/msm1089/ipynbname/issues/17\n",
+    "\n",
+    "ip = get_ipython()\n",
+    "nb_path = ip.user_ns['__vsc_ipynb_file__'] if '__vsc_ipynb_file__' in ip.user_ns else None\n",
+    "current_nb = os.path.basename(nb_path)\n",
+    "\n",
+    "## Full url to remote notebook \n",
+    "# For now, I will assume the github URL structure and just construct it with string concatenation. \n",
+    "full_github_url = f\"{current_remote_url.rstrip('.git')}/tree/{current_branch}/{current_nb}\"\n",
+    "full_github_url"
    ]
   }
  ],
